[Update] 'type' scaffold deleted + minor updates in admin zone
Estive a ver e o scaffold do type foi criado há 2 meses, eu não me
lembro de o usar nunca nem vi utilizações dele no código. Acho que era
para ser a mesma coisa que o price_type. Se estiver errado peço
desculpa e alguém que faça rollback :)

--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -11,6 +11,16 @@
     text-decoration: none;
     color: black;
 }
+
+/** LINK adminZONE **/
+.newItemLink{
+  text-align: right;
+}
+
+.newItemLink > a:hover {
+  color: #000;
+}
+
 /************************/
 
 
