--- a/app/views/admin/academy/tutorials/index.html.erb
+++ b/app/views/admin/academy/tutorials/index.html.erb
@@ -1,10 +1,12 @@
-<h1>Tutoriais por aprovar</h1>
 
-<table class="table">
+<section class="panel">
+  <header class="panel-heading"><h1>Tutoriais por aprovar</h1></header>
+<div class="table-responsive">
+  <table class="table table-hover" >
 	<tr>
 		<th>Autor</th>
 		<th>Título</th>
-		<th>Rapid_Description</th>
+		<th>Resumo</th>
 		<th>Ver</th>
 		<th>Aprovar</th>
 	</tr>
@@ -20,15 +22,18 @@
 		<% end %>
 	<% end %>
 </table>
+</div>
+</section>
 
 
-<h1>Tutoriais aprovados</h1>
-
-<table class="table">
+<section class="panel">
+  <header class="panel-heading"><h1>Tutoriais aprovados</h1></header>
+<div class="table-responsive">
+  <table class="table table-hover" >
 	<tr>
 		<th>Autor</th>
 		<th>Título</th>
-		<th>Rapid_Description</th>
+		<th>Resumo</th>
 		<th>Ver</th>
 		<th>Editar</th>
 	</tr>
@@ -44,3 +49,5 @@
 		<% end %>
 	<% end %>
 </table>
+</div>
+</section>
