--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -108,7 +108,7 @@
 
 
       <!--ZONA Dos EVENTOS -->
-                 <a href="#events-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-quote-left"></i>Eventos</a>
+                 <a href="#events-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-calendar"></i> Eventos</a>
                   <ul id="events-menu" class="nav nav-list collapse">
                       <li> 
                        <%= link_to "<i class='fa fa-eye'></i>Ver Eventos".html_safe  , admin_event_events_path %>
