--- a/app/views/admin/ads/index.html.erb
+++ b/app/views/admin/ads/index.html.erb
@@ -1,10 +1,9 @@
-<ol class="breadcrumb">
-              <li class="active"><a href="<%= ads_path %>"><i class="fa fa-dashboard"></i> Anúncios</a></li>
-
-</ol>
-
 <section class="panel">
-  <header class="panel-heading"><h1>Lista de anúncios</h1></header>
+  <header class="panel-heading"><h1>Lista de Anúncios</h1>
+        <div class="newItemLink">
+      <i class="fa fa-plus-circle"></i><%= link_to ' Novo Anúncio', new_admin_ad_path %>
+    </div>
+  </header>
   <div class="table-responsive">
     <table class="table table-hover" >
       <thead>
@@ -12,17 +11,13 @@
           <th></th>
           <th>Imagem</th>
           <th>Título</th>
-          <th>Descrição</th>
-          <th>Preço</th>
-          
           <th>Categoria</th>
           <th>Data de expiração</th>
           <th>Local</th>
           <th>Activo?</th>
           <th>Apagado?</th>
           <th>Cidade</th>
-          <th>User_ID / User_Name</th>
-          <th>Criado em</th>
+          <th>User_ID / Nome</th>
           <th></th>
         </tr>
       </thead>
@@ -41,8 +36,6 @@
               </div>
             </td>
             <td><%= ad.title %></td>
-            <td><%= ad.description %></td>
-            <td><%= ad.price %> <%= ad.type_price_id %></td>
             <td>
               <% if ad.category %>
                 <span class="label" style="background-color: #<%= ad.category.color %>">
@@ -61,8 +54,6 @@
             <td><%= ad.is_deleted %></td>
             <td><%= ad.city.city unless ad.city.blank? %></td>
             <td><%= ad.user_id %> / <%= ad.user.name unless ad.user.blank?%></td>
-            <td><strong><%= t ad.created_at , :format => :short%></strong>
-            </td>
 
             <td><%= link_to 'Ver', [:admin,ad] %>
             <%= link_to 'Editar', edit_admin_ad_path(ad) %>
@@ -74,16 +65,13 @@
                 <table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">
                    <tbody>
                       <tr>
-                         <td>Detalhes:</td>
-                         <td>blabla</td>
+                         <td>Data de criação:   <strong><%= t ad.created_at , :format => :short%></strong></td>
                       </tr>
                       <tr>
-                         <td>Detalhes:</td>
-                         <td>blabla</td>
+                         <td>Preço: <%= ad.price %></td>
                       </tr>
                       <tr>
-                         <td>Detalhes:</td>
-                         <td>blabla</td>
+                         <td>Descrição: <%= ad.description %></td>
                       </tr>
                    </tbody>
                 </table>
@@ -95,11 +83,9 @@
     </table>
   </div >
   <br>
-
-
-<%= link_to 'Novo anúncio', new_ad_path %>
-
 </section>
+
+<i class="fa fa-plus-circle"></i><%= link_to ' Novo Anúncio', new_admin_ad_path %>
 
 
 
