--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,5 +1,9 @@
 <section class="panel">
   <header class="panel-heading"><h1>Lista de Categorias</h1></header>
+  <div class="newItemLink">
+  <i class="fa fa-plus-circle"></i><%= link_to ' Nova Categoria ', new_admin_category_path %>
+  </div>
+
 
 <div class="table-responsive">
   <table class="table table-hover" >
@@ -8,7 +12,7 @@
           <th>Nome</th>
           <th>Descrição</th>
           <th>Cor</th>
-          <th>Quantidade de anúncios</th>
+          <th>Qt de anúncios</th>
           <th></th>
           <th></th>
           <th></th>
@@ -21,7 +25,7 @@
             <td><%= category.name %></td>
             <td><%= category.description %></td>
             <td>
-              <span class="label" style="background-color: #<%= category.color %>"></span>
+              <span class="label" style="background-color: #<%= category.color %>"> </span>
             </td>
             <td><%= category.ads.count %></td>
             <td><%= link_to 'Editar', edit_admin_category_path(category) %></td>
@@ -33,3 +37,5 @@
 <div>
 
 </section>
+<i class="fa fa-plus-circle"></i><%= link_to ' Nova Categoria', new_admin_category_path %>
+
