--- a/app/views/admin/cities/index.html.erb
+++ b/app/views/admin/cities/index.html.erb
@@ -1,32 +1,44 @@
+
 <section class="panel">
-  <header class="panel-heading"><h1>Lista de cidades</h1></header>
-<div class="table-responsive">
-  <table class="table table-hover" >
-  <thead>
-    <tr>
-      <th>Cidade</th>
-      <th>País</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @cities.each do |city| %>
-      <tr>
-        <td><%= city.city %></td>
-        <!--td><%#city.country_id %></td-->
-        <!--td><%= link_to 'Ver', [:admin,city] %></td-->
-        <td><%= link_to 'Editar', edit_admin_city_path(city) %></td>
-        <td><%= link_to 'Eliminar', [:admin,city], method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-</div>
-<br>
+  <header class="panel-heading"><h1>Lista de cidades</h1> 
+    <div class="newItemLink">
+      <i class="fa fa-plus-circle"></i><%= link_to ' Nova cidade', new_admin_city_path %>
+    </div>
+  </header>
 
-<%= link_to 'Nova cidade', new_admin_city_path %>
+  <div class="table-responsive">
+    <table class="table table-hover" >
+      <thead>
+        <tr>
+          <th>Cidade</th>
+          <th>Qt de Anúncios</th>
+          <th>Qt de Utilizadores</th>
+
+          <!--th></th-->
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @citiesAZ.each do |city| %>
+        <tr>
+          <td><%= city.city %></td>
+          <td><%= city.ads.count %></td>
+          <td><%= city.users.count %></td>
+
+          <!--td><%#city.country_id %></td-->
+          <!--td><%= link_to 'Ver', [:admin,city] %></td-->
+          <td><%= link_to 'Editar', edit_admin_city_path(city) %></td>
+          <td><%= link_to 'Eliminar', [:admin,city], method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <br>
 
 </section>
+
+<i class="fa fa-plus-circle"></i><%= link_to ' Nova cidade', new_admin_city_path %>
