WelcomePage[Update]&&WelcomePageAcademy

--- a/app/assets/stylesheets/academy.css
+++ b/app/assets/stylesheets/academy.css
@@ -6,3 +6,40 @@
 	padding-right:50px;
 	padding-left:50px;
 }
+
+
+/********** Academia_paginainicial **********/
+
+
+#academy_page{
+  
+ 
+ 
+
+}
+
+#academy_book{
+   
+   margin-top:10%; 
+   margin-left: 5%;
+ }
+
+ #academy_book img{
+  
+
+
+ }
+
+#academy_questions{
+	margin-left: 20%;
+  
+ }
+
+#academy_workshops{
+margin-left: 20%;
+
+}
+
+#academy_tutoriais{
+margin-left: 20%;
+}
