--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,214 +23,25 @@
 
   <!-- _______________________Slogan___________________ -->
 
-  <div id="login_body"  data-slide="1" class="bgParallax slide teste" data-speed="15">
+  <div id="login_body2"  data-slide="1" class="bgParallax slide teste" data-speed="15">
 
-      <div class="vert-text">
+    <div class="next_section_button" id="next" data-slide="2" style="margin-bottom: 0px;"> </div>
+    <div class="prev_section_button" id="prev" data-slide="2" style="margin-bottom: 0px;"> </div>
 
-
-        <div class="col-slogan">
-
-              <h1 class="login-title"> AgroSocial </h1>
-              <h4 class="login-slogan">A SEMENTE DO SEU NEGÓCIO</h4>
-              
-        </div>
-            
-             
-      </div>
-      
-
-      <div class="next_section_button" id="next" data-slide="2" style="margin-bottom: 0px;"> </div>
-
-      <div class="prev_section_button" id="prev" data-slide="2" style="margin-bottom: 0px;"> </div>
   </div>
+
+
 
   <!-- ________________________ Section Information ___________________________________ -->
-
-  <div id="login_body_image" data-slide="2" class="bgParallax slide img-responsive" data-speed="10">
-  </div>
-
-  <div id="section_negocio" class="login_section_information slide teste img-responsive" data-slide="2"  data-speed="10">
-
- <section class="panel">
-        <div class="panel-body">
-          <div class="col-md-5 text-center">
-             <div class="service-item">
-                                    
-                                    
-                                    <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/RetFcjbzInY?autoplay=1">
-                                      <i class="service-icon icon-shopping-cart"></i>
-                                    </a>
-             </div>
-
-          </div>
-          <div class="col-sm-7">
-                <div class="information">
-
-                                                <h1>Negócio</h1>
-                                                <br/>
-                                                <h4>
-                                                  Encontre o melhor preço para o produto que procura ou divulgue os seus produtos a uma vasta comunidade.
-                                                </h4>
-                                      
-                  </div>
-          </div>
-        </div>
-
-    </section>
-
-      
-</div>
-
-<div id="login_body_image2" class="bgParallax" data-speed="15">
-</div>
-
-<div id="section_emprego" class="login_section_information slide teste" data-slide="2" data-speed="20">
-
-
-    <section class="panel">
-        <div class="panel-body">
-          <div class="col-md-5 text-center">
-             <div class="service-item">
-                                    
-                                    
-                                    <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/XMkeeZgHY14?autoplay=1">                    
-                                     <i class="service-icon icon-male"></i>
-                                     </a>
-             </div>
-
-          </div>
-          <div class="col-sm-7">
-                <div class="information">
-
-                                                <h1>Emprego</h1>
-                                    <br/>
-                                    <h4>
-                                      Encontre um emprego à medida das suas capacidades ou a mão de obra que precisa para aquela tarefa específica.
-                                    </h4>
-                                
-                                      
-                  </div>
-          </div>
-        </div>
-
-    </section>
-      
-     
-  </div>
-
-
-  <div id="login_body_image3" class="bgParallax" data-speed="15">
-  </div>
-
-  <div id="section_conhecimento" class="login_section_information slide teste" data-slide="2" data-speed="10">
-
-
-    <section class="panel">
-        <div class="panel-body">
-          <div class="col-md-5 text-center">
-             <div class="service-item">
-                                    
-                                    
-                                     <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/yCn7XZVuRDg?autoplay=1">
-                                     <i class="service-icon icon-group"></i>
-                                     </a>
-             </div>
-
-          </div>
-          <div class="col-sm-7">
-                <div class="information">
-
-                                                <h1>Conhecimento</h1>
-                                    <br/>
-                                    <h4>
-                                      Participe em workshops ou siga técnicos especializados na nossa academia. Partilhe conhecimento na sua área de interesse.
-                                    </h4>
-                                      
-                  </div>
-          </div>
-        </div>
-
-    </section>
-      
-     
-  </div>
-
-  <div id="login_body_image4" class="bgParallax" data-speed="15">
-  </div>
-
-  <div id="section_divulgacao" class="login_section_information slide teste" data-slide="2"  data-speed="10">
-      
-       <section class="panel">
-        <div class="panel-body">
-          <div class="col-md-5 text-center">
-             <div class="service-item">
-                                    
-                                    
-                                      <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/irLwbREnL54?autoplay=1">         
-                                     <i class="service-icon icon-bullhorn"></i>
-                                      </a>
-             </div>
-
-          </div>
-          <div class="col-sm-7">
-                <div class="information">
-
-                                   <h1>Divulgação</h1>
-                                    <br/>
-                                    <h4>
-                                      Divulgue a sua empresa, negócio ou produtos facilmente e a quem realmente interessa.
-                                    </h4>
-                                      
-                  </div>
-          </div>
-        </div>
-
-    </section>
-
-     
-  </div>
-
-  <div id="login_body_image5" class="bgParallax" data-speed="15">
-  </div>
-
-<div id="section_participacao" class="login_section_information slide teste" data-slide="2"  data-speed="10">
-      
-       <section class="panel">
-        <div class="panel-body">
-          <div class="col-md-5 text-center">
-             <div class="service-item">
-                                    
-                                    
-                                     <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/D5seyeETouQ?autoplay=1">
-                                                      
-                                     <i class="service-icon icon-calendar-empty"></i>
-             </div>
-
-          </div>
-          <div class="col-sm-7">
-                <div class="information">
-
-                                    <h1>Participação</h1>
-                                          <br/>
-                                          <h4>
-                                            Crie, promova e participe em eventos sociais ou profissionais.
-                                          </h4>
-                                      
-                  </div>
-          </div>
-        </div>
-
-    </section>
-
-     
-  </div>
-  <!-- ________________________ Section Video ___________________________________ -->
-
-  <div id="login_body_show" data-slide="2" class="bgParallax slide" data-speed="10">
   
-  </div>
 
-  <div id="login_section_video" data-slide="2" class="slide teste" data-speed="10">
+   <div id="login_body_image" data-slide="2" class="bgParallax slide img-responsive" data-speed="10">
+   </div>
+
+
+   <!-- ________________________ Section Video ___________________________________ -->
+
+   <div id="login_section_video" data-slide="2" class="slide teste" data-speed="10">
 
       <div id="section-video" data-auto-size="0.6" >
             <div id="top" class="header scroller">
@@ -246,6 +57,7 @@
                         <li><a href="https://twitter.com/agro_social" target="_blank"><div id="twitter"></div></a></li>
                         <li><a href="https://agrosocial.pt" target="_blank"><div id="contact"></div></a></li>
                       </ul>
+
                       <div id="copyright">Agrosocial&copy 2013</div>
                       <p></p>
 
@@ -260,15 +72,81 @@
 
          
      </div>
-</div>
+   </div>
+
+   <div id="login_body_image2" class="bgParallax" data-speed="15">
+   </div>
+
+  <div id="section_emprego" class="login_section_information slide teste" data-slide="2" data-speed="20">
 
 
-<!-- ________________________ Section Regist ___________________________________ -->
+            <div id="services" class="services">
+              <div class="container">
+                <div class="vert-text">
+                  <div class="row">
+                    <div class="col-md-4 col-md-offset-4 text-center">
+                      <h2>O que fazemos</h2>
+                      <hr>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-2 col-md-offset-1 text-center">
+                      <div class="service-item">
+                        <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/RetFcjbzInY?autoplay=1">
+                          <i class="service-icon icon-shopping-cart"></i>
+                        </a>
+                        <h4>Negócio</h4>
+                        <p>Encontre o melhor preço para o produto que procura ou divulgue os seus produtos a uma vasta comunidade.</p>
+                      </div>
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <div class="service-item">
+                        <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/XMkeeZgHY14?autoplay=1">
+                          <i class="service-icon icon-male"></i>
+                        </a>
+                        <h4>Emprego</h4>
+                        <p>Encontre um emprego à medida das suas capacidades ou a mão de obra que precisa para aquela tarefa específica.</p>
+                      </div>
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <div class="service-item">
+                        <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/yCn7XZVuRDg?autoplay=1">
+                          <i class="service-icon icon-group"></i>
+                        </a>
+                        <h4>Conhecimento</h4>
+                        <p>Participe em workshops ou siga técnicos especializados na nossa academia. Partilhe conhecimento na sua área de interesse.</p>
+                      </div>
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <div class="service-item">
+                        <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/irLwbREnL54?autoplay=1">
+                          <i class="service-icon icon-bullhorn"></i>
+                        </a>
+                        <h4>Divulgação</h4>
+                        <p>Divulgue a sua empresa, negócio ou produtos facilmente e a quem realmente interessa.</p>
+                      </div>
+                    </div>
+                    <div class="col-md-2 text-center">
+                      <div class="service-item">
+                        <a class="frame" data-fancybox-type="iframe" href="http://www.youtube.com/embed/D5seyeETouQ?autoplay=1">
+                          <i class="service-icon icon-calendar-empty"></i>
+                        </a>
+                        <h4>Participação</h4>
+                        <p>Crie, promova e participe em eventos sociais ou profissionais.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
 
-<div id="login_body_regist" class="bgParallax" data-speed="10">
-</div>
 
-<div id="login_section_regist" class="teste" data-speed="10">
+  </div>
+
+  <div id="login_body_image3" class="bgParallax" data-speed="15">
+  </div>
+
+  <div id="login_section_regist" class="teste" data-speed="10">
 
     <section id="section-regist" data-auto-size="0.6" >
 
@@ -318,10 +196,7 @@
               </div>    
       </section>
 </div>
-
 <%= render 'layouts/footer' %>
-
-
 </body>
 </html>
 
