--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,17 +38,17 @@
         </ul>
       </li>
       <!-- END SEARCH -->
-     
+
       <!-- END SEARCH -->
        <script type="text/javascript">
            $(function(){
                 //window.query_cache = {};
                 var labels = [];
-                var mapped = {}; 
+                var mapped = {};
                 $('.typeahead').typeahead({
                   source: function (query, process) {
                     labels = [];
-                    mapped = {}; 
+                    mapped = {};
                      return $.ajax({
                       url: "/search",
                       type: 'get',
@@ -94,13 +94,13 @@
                     //alert(item)
                     return item;
                 }
-              }); 
-                 
+              });
+
           });
 
-          
+
       </script>
-    
+
 
       <!-- NOTIFICACOES -->
       <% if user_signed_in? %>
@@ -143,42 +143,11 @@
         <!--END NOTIFICACOES-->
 
         <!-- ADS -->
-        <% expired_ads=current_user.expired_ads %>
-        <li class="dropdown messages-dropdown">
-          <% if expired_ads.count >0 %>
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags" id="fa-tags"></i><span class="badge" id="custom-badge"><%= expired_ads.count %></span><b class="caret" id="dropCarret"></b></a>
-          <% else %>
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags" id="fa-tags"></i><b class="caret" id="dropCarret"></b></a>
-          <% end %>
-          <ul class="dropdown-menu">
 
-            <% if expired_ads.count > 0 %>
-              <li class="dropdown-header"><%= expired_ads.count %> ads have expired</li>
-              <% first_expired_ads = expired_ads.limit(5) %>
-              <% first_expired_ads.each do |ad| %>
-                <li class="preview">
-                  <a href="<%= ad_path(ad) %>">
-                           <% if ad.ad_images.count > 0 %>
-                      <span class="avatar"><%= image_tag(ad.ad_images.first.image.url(:thumb), :alt => ad.title, :width => '50') %></span>
-                    <% else %>
-                      <span class="avatar"><img width="50" alt="50x50" src="http://placehold.it/50x50"></img></span>
-                    <% end %>
-                    <span class="name"><%= ad.title %></span>
-                    <span class="message"><%= ad.limited_description(20) %></span>
-                    <span class="time"><i class="icon-time"></i>
-                    <abbr class="timeago" title="<%= ad.expire_date.getutc.iso8601 %>"> <%= ad.expire_date.to_s %> </abbr>
-                    </span>
-                  </a>
-                </li>
-                <li class="divider"></li>
-              <% end %>
-            <% else %>
-              <li class="dropdown-header">Alertas do Mercado.</li>
-            <% end %>
-            <li><a href="<%= myads_user_path(current_user.id) %>"> Ver todos </a></li>
+        <%= render "layouts/header_ads_notification" %>
 
-          </ul>
-        </li>
+
+
         <!--END ADS-->
 
         <!-- ACADEMIA -->
